# binius-NTT

./: .gitignore  .gitmodules  .kaggleignore  ANTT_OPTIMIZATION_README.md  BENCHMARK_DETAILS.md  BENCHMARK_UPDATE.md  BUILD_FIX.md  CLOUD_GPU_SETUP.md  CMakeLists.txt  COMMIT_GUIDE.md  FILES_CREATED.txt  GIT_COMMIT_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  KAGGLE_CLOUD_INSTRUCTIONS.md  KAGGLE_PUSH_GUIDE.md  KAGGLE_STATUS.md  KAGGLE_TRIAL_RUN.md  NTT_IMPLEMENTATION_DETAILS.md  QUICK_START.md  README_NTT.md  build_ntt.sh  compare_ntt.sh  kernel-metadata.json  profile_antt.sh  run_antt_benchmark.sh  run_trial.py  setup_colab.sh  setup_kaggle.sh
src/ulvt/finite_fields/: cm31.cuh  m31.cuh  qm31.cuh  test.cu
src/ulvt/finite_fields/circuit_generator/: multiply_and_generate_circuit.cpp
src/ulvt/ntt/: gpuntt.cuh  modified_antt.cuh  result.txt
src/ulvt/ntt/tests/: benchmark_antt.cu  benchmark_antt.cu.backup
src/ulvt/prime_field_sumcheck/: sumcheck.cuh  test_sumcheck.cu
src/ulvt/prime_field_sumcheck/core/: kernels.cu  kernels.cuh
src/ulvt/prime_field_sumcheck/utils/: interpolate.hpp
